[package]
name = "consensus"
version = "0.1.0"
edition = "2021"
description = "Quorum consensus layer for Cycles Protocol liquidity injector"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
hex = "0.4"

# Local dependency for shared types
enclave = { path = "../enclave" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
