[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
description = "CosmWasm settlement contract for Cycles Protocol liquidity injector"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Disable export feature to allow library usage in tests
library = []

[dependencies]
cosmwasm-std = { version = "2.2", features = ["staking"] }
cosmwasm-schema = "2.2"
cw-storage-plus = "2.0"
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"], default-features = false }
hex = "0.4"

[dev-dependencies]
cw-multi-test = "2.3"
rand = { workspace = true }
