[package]
name = "enclave"
version = "0.1.0"
edition = "2021"
description = "TEE enclave logic for Cycles Protocol liquidity injector"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
aes-gcm = "0.10"
petgraph = "0.6"
borsh = { version = "1", features = ["derive"] }
hex = "0.4"
serde-big-array = "0.5"

[dev-dependencies]
rand = "0.8"
